# fund-helper

./: .dockerignore  .env.docker.example  .gitignore  .npmrc  API_README.md  Dockerfile  README.md  TECH.md  dev-infra.sh  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  publish-chrome.sh  publish-desktop.sh  publish-extensions.sh  publish-image.sh  publish-jetbrains.sh  publish-vscode.sh  reset.sh  start.sh  versions.json
backend/: .env.example  requirements.txt
chrome-extension/: README.md  index.html  manifest.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
data/: notification-config.json  oauth-pending.json
desktop/: README.md  index.html  menubar.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  db.rs  error.rs  income.rs  lib.rs  main.rs  portfolio.rs  yjb.rs
desktop/src-tauri/src/notify/: config.rs  delivery_catalog.rs  feishu_app.rs  feishu_card.rs  feishu_group.rs  mod.rs  push.rs  scheduler.rs  template.rs  webhook.rs
desktop/src-tauri/src/plugins/: macos_tray_click.rs  menu_bar.rs  mod.rs  system_tray.rs
docs-site/: README.md  package.json  rspress.config.ts  tsconfig.json
frontend/: biome.json  index.html  package-lock.json  package.json  rsbuild.config.ts  tsconfig.json
jetbrains-extension/: .gitignore  README.md  build.gradle.kts  package.json  pnpm-lock.yaml  settings.gradle.kts  tsconfig.json  (+1 more)
(+265 files in other folders)
