[package]
name = "fund-helper-desktop"
version = "0.1.0"
description = "Fund Helper Desktop — 养基宝持仓桌面客户端"
authors = ["Fund Helper"]
edition = "2021"

[lib]
name = "fund_helper_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.10", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
md5 = "0.7"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = "0.4"
thiserror = "1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
urlencoding = "2"
hex = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
